<resources>
    <string name="app_name">SMW</string>
    <string name="dpad">dpad</string>
    <string name="abxy">A B X Y buttons </string>
    <string name="select_button">Select</string>
    <string name="start_button">Start</string>
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_x">X</string>
    <string name="button_y">Y</string>
    <string name="button_l">L</string>
    <string name="button_r">R</string>
    <string name="turbo">Turbo</string>
    <string name="keyboard">Display keyboard</string>
</resources>
