<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.01"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/ButtonKeyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/keyboard"
        android:src="@android:drawable/ic_dialog_dialer"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/Button_start"
        android:layout_width="75dp"
        android:layout_height="27dp"
        android:layout_marginBottom="8dp"
        android:background="#00FFFFFF"
        android:text="@string/start_button"
        android:src="@drawable/start_button"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/Button_ABXY"
        app:layout_constraintHorizontal_bias="0.66"/>


    <ImageButton
        android:id="@+id/Button_select"
        android:layout_width="75dp"
        android:layout_height="27dp"
        android:layout_marginBottom="8dp"
        android:background="#00FFFFFF"
        android:text="@string/select_button"
        android:src="@drawable/select_button"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/Button_Dpad"
        app:layout_constraintHorizontal_bias="0.33"/>

    <ImageButton
        android:id="@+id/Button_L"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button_l"
        android:src="@drawable/l_button"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@id/Button_Dpad"
        app:layout_constraintStart_toStartOf="@id/Button_Dpad" />

    <ImageButton
        android:id="@+id/Button_R"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button_r"
        android:src="@drawable/r_button"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@id/Button_ABXY"
        app:layout_constraintEnd_toEndOf="@id/Button_ABXY" />

    <ImageButton
        android:id="@+id/Button_Dpad"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/dpad"
        android:src="@drawable/d_pad"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@id/Button_select"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/Button_ABXY"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/abxy"
        android:src="@drawable/abxy"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@id/Button_start"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/Button_Turbo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/turbo"
        android:src="@android:drawable/ic_media_ff"
        app:layout_constraintBottom_toTopOf="@id/Button_R"
        app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
        android:id="@+id/seekBar_Alpha"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:progress="100"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
